Update backend and frontend (new version)